<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_import">Import List</string>
    <string name="button_add">ADD</string>
    <string name="button_add_hint">Add a Shopping List</string>
    <string name="button_add_hint2">Add an item to the list</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_update_setting">System Settings</string>
    <string name="pref_currency_type">Currency type</string>
    <string name="pref_currency_type_summary">Set the currency type digit</string>
    <string name="pref_hide_items">Hide items</string>
    <string name="pref_hide_items_summary">Hide list\'s purchased items</string>
    <string name="pref_sum_price">Sum purchased items</string>
    <string name="pref_sum_price_summary">Calc purchased items\' price only</string>
    <string name="pref_auto_complete">Auto-completion</string>
    <string name="pref_auto_complete_summary">Auto-complete item on typing</string>
    <string name="pref_price_comparison">Price comparison</string>
    <string name="pref_price_comparison_summary">Compare prices of similar items</string>
    <string name="pref_software_developer">Software Developer</string>
    <string name="pref_software_developer_name">Rafael Henrique Vareto</string>
    <string name="pref_software_developer_university">University of Strathclyde</string>
    <string name="menu_asda">Import ASDA</string>
    <string name="menu_tesco">Import Tesco</string>
    

</resources>