<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <EditTextPreference
                android:title="@string/pref_user_name"
                android:summary="@string/pref_user_name_summary"
                android:key="prefUsername"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_update_setting" >
       <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefAutoComplete"
            android:summary="@string/pref_auto_complete_summary"
            android:title="@string/pref_auto_complete" >
        </CheckBoxPreference>
        
        <ListPreference
            android:title="@string/pref_currency_type"
            android:key="prefCurrencyType"
            android:summary="@string/pref_currency_type_summary"
            android:entries="@array/CurrencyTypes"
            android:entryValues="@array/CurrencyValues" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefHideItems"
            android:summary="@string/pref_hide_items_summary"
            android:title="@string/pref_hide_items" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefPriceComparison"
            android:summary="@string/pref_price_comparison_summary"
            android:title="@string/pref_price_comparison" >

        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSumItems"
            android:summary="@string/pref_sum_price_summary"
            android:title="@string/pref_sum_price" >
        </CheckBoxPreference>
            
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_software_developer">
        <Preference 
            android:title="@string/pref_software_developer_name"
            android:summary="@string/pref_software_developer_university"
            android:selectable="false"
            />
    </PreferenceCategory>
</PreferenceScreen>